dev/ingress/fake82-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fake82-ingress
  namespace: fake82-ns
spec:
  ingressClassName: nginx
  rules:
    - host: fake82.dolphin.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fake82-service
                port:
                  number: 20082
